--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/mvp1.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -39,7 +39,7 @@
 						</header>
 						<div class="content">
 							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image main"><img src="images/logo.png" alt="" /></span>
 						</div>
 					</section>
 
@@ -78,10 +78,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="images/mvp3.jpg" class="landscape"><img src="images/mvp3.jpg" alt="" /></a>
+											<a href="images/mvp2.jpg"><img src="images/mvp2.jpg" alt="" /></a>
+											<a href="images/paperpaper.jpg"><img src="images/paperpaper.jpg" alt="" /></a>
+											<a href="images/paper1.png" class="landscape"><img src="images/paper1.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -94,9 +94,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="images/paper2.png" class="landscape"><img src="images/paper2.png" alt="" /></a>
+											<a href="images/ecobag1.png"><img src="images/ecobag1.png" alt="" /></a>
+											<a href="images/ecobag2.png"><img src="images/ecobag2.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -109,9 +109,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+											<a href="images/ecobag3.png" class="portrait"><img src="images/ecobag3.png" alt="" /></a>
 											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="images/logo.png" class="landscape"><img src="images/logo.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -429,15 +429,15 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">leemil1211@naver.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">010-8347-1211</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>서울시 강동구 성안로 39, 1층 엥겔플랜트</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
